[gd_scene load_steps=25 format=3 uid="uid://cydblf7qbhscc"]

[ext_resource type="Theme" uid="uid://03uj4tl6r2j5" path="res://themes/color_panel_theme.tres" id="1_ug54k"]
[ext_resource type="Script" uid="uid://bqxmrgr8lllgq" path="res://undo_redo.gd" id="2_3gw01"]
[ext_resource type="Texture2D" uid="uid://c87d5r7d05vm6" path="res://images/undo.svg" id="3_d7ifm"]
[ext_resource type="Script" uid="uid://grhk0oblfwlo" path="res://undo.gd" id="4_g3ej4"]
[ext_resource type="Texture2D" uid="uid://df6vqiptnc57t" path="res://images/redo.svg" id="5_1pj6j"]
[ext_resource type="Script" uid="uid://j02kfylg3qpq" path="res://redo.gd" id="6_mh2wu"]
[ext_resource type="AudioStream" uid="uid://b8tk52txq3eog" path="res://audio/switch_004.ogg" id="7_ebitm"]
[ext_resource type="Script" uid="uid://cau827vg61ucx" path="res://scripts/color_picker.gd" id="8_rtxx1"]
[ext_resource type="AudioStream" uid="uid://c3afjj6upmgfp" path="res://audio/select_006.ogg" id="9_8w0u1"]
[ext_resource type="Theme" uid="uid://by45e5y3feaxq" path="res://themes/generic_theme.tres" id="10_0oya8"]
[ext_resource type="Script" uid="uid://c4ffxnqvwse2y" path="res://scripts/color_palette.gd" id="11_3i43v"]
[ext_resource type="PackedScene" uid="uid://tm4wvtxirrw5" path="res://scenes/swatch_container.tscn" id="12_qcf2h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_163kg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ukc5n"]

[sub_resource type="Theme" id="Theme_2d7ds"]
Button/styles/focus = SubResource("StyleBoxEmpty_163kg")
Button/styles/hover = SubResource("StyleBoxEmpty_ukc5n")

[sub_resource type="Animation" id="Animation_88ovf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/icon_max_width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [122]
}

[sub_resource type="Animation" id="Animation_qt7qe"]
resource_name = "push"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/icon_max_width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0334333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [50, 50, 122]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4blo7"]
_data = {
&"RESET": SubResource("Animation_88ovf"),
&"push": SubResource("Animation_qt7qe")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xbl45"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3mmok"]

[sub_resource type="Theme" id="Theme_yi2xk"]
Button/styles/focus = SubResource("StyleBoxEmpty_xbl45")
Button/styles/hover = SubResource("StyleBoxEmpty_3mmok")

[sub_resource type="Animation" id="Animation_mltnr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/icon_max_width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [122]
}

[sub_resource type="Animation" id="Animation_p18as"]
resource_name = "push"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_constants/icon_max_width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [50, 122]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btvr1"]
_data = {
&"RESET": SubResource("Animation_mltnr"),
&"push": SubResource("Animation_p18as")
}

[node name="ControlPanel" type="PanelContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1588.0
offset_right = 18.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_ug54k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UndoRedo" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.21
script = ExtResource("2_3gw01")

[node name="Undo" type="Button" parent="VBoxContainer/UndoRedo"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_2d7ds")
theme_override_constants/icon_max_width = 122
theme_override_icons/icon = ExtResource("3_d7ifm")
action_mode = 0
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_g3ej4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/UndoRedo/Undo"]
libraries = {
&"": SubResource("AnimationLibrary_4blo7")
}

[node name="Redo" type="Button" parent="VBoxContainer/UndoRedo"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_yi2xk")
theme_override_constants/icon_max_width = 122
theme_override_icons/icon = ExtResource("5_1pj6j")
action_mode = 0
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_mh2wu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/UndoRedo/Redo"]
libraries = {
&"": SubResource("AnimationLibrary_btvr1")
}

[node name="UndoRedoSound" type="AudioStreamPlayer2D" parent="VBoxContainer/UndoRedo"]
unique_name_in_owner = true
position = Vector2(-1631, -25)
stream = ExtResource("7_ebitm")

[node name="ColorPicker" type="ColorPicker" parent="VBoxContainer" groups=["color_picker"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/sv_height = 300
alignment = 1
color = Color(0, 0, 0, 1)
edit_alpha = false
picker_shape = 1
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false
script = ExtResource("8_rtxx1")

[node name="PickerSound" type="AudioStreamPlayer2D" parent="VBoxContainer/ColorPicker"]
unique_name_in_owner = true
stream = ExtResource("9_8w0u1")

[node name="ColorPalette" type="GridContainer" parent="VBoxContainer" node_paths=PackedStringArray("swatch_node")]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("10_0oya8")
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 0
columns = 2
script = ExtResource("11_3i43v")
swatch_node = [NodePath("SwatchContainer0"), NodePath("SwatchContainer1"), NodePath("SwatchContainer2"), NodePath("SwatchContainer3"), NodePath("SwatchContainer4"), NodePath("SwatchContainer5"), NodePath("SwatchContainer6"), NodePath("SwatchContainer7")]

[node name="SwatchContainer0" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[node name="SwatchContainer1" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[node name="SwatchContainer2" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[node name="SwatchContainer3" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[node name="SwatchContainer4" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[node name="SwatchContainer5" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[node name="SwatchContainer6" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[node name="SwatchContainer7" parent="VBoxContainer/ColorPalette" instance=ExtResource("12_qcf2h")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/UndoRedo/Undo" to="VBoxContainer/UndoRedo" method="_on_undo_pressed"]
[connection signal="pressed" from="VBoxContainer/UndoRedo/Undo" to="VBoxContainer/UndoRedo/Undo" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/UndoRedo/Redo" to="VBoxContainer/UndoRedo" method="_on_redo_pressed"]
[connection signal="pressed" from="VBoxContainer/UndoRedo/Redo" to="VBoxContainer/UndoRedo/Redo" method="_on_pressed"]
[connection signal="color_changed" from="VBoxContainer/ColorPicker" to="VBoxContainer/ColorPicker" method="_on_color_changed"]
[connection signal="color_changed" from="VBoxContainer/ColorPicker" to="VBoxContainer/ColorPalette" method="_on_color_picker_color_changed"]
[connection signal="preset_added" from="VBoxContainer/ColorPicker" to="VBoxContainer/ColorPalette" method="_on_color_picker_preset_added"]
